--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,12 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+spring.application.name=productService
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+server.port=8081
+#server.port=${SERVER_PORT}
