--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.application.name=productService
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 server.port=8081
 #server.port=${SERVER_PORT}
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
